names of two new functions added

--- a/stylo_howto.tex
+++ b/stylo_howto.tex
@@ -1,6 +1,6 @@
 
 
-% 2014/5/27
+% 2014/07/27
 
 
 \documentclass[11pt,a4paper]{article}
@@ -251,7 +251,9 @@ your own scripts and functions. These include:
 \begin{itemize}
   \item \code{assign.plot.colors} 
   \item \code{define.plot.area} 
-  \item \code{delete.markup} 
+  \item \code{delete.markup}
+  \item \code{delete.stop.words}
+  \item \code{culling}  
   \item \code{gui.classify} 
   \item \code{gui.stylo} 
   \item \code{load.corpus.and.parse} 
@@ -264,6 +266,9 @@ your own scripts and functions. These include:
   \item \code{txt.to.features} 
   \item \code{txt.to.words.ext} 
   \item \code{txt.to.words} 
+  \item \code{zeta.chisquare}
+  \item \code{zeta.craig}
+  \item \code{zeta.eder}
 \end{itemize}
 
 In most cases, these lower-level functions provide very basic processing
@@ -1888,7 +1893,8 @@ Eder, M. (2014). Does size matter? Authorship attribution, short samples,
 big problem. \textit{Literary and Linguistic Computing}, \textbf{29},
 Advanced Access published 14 November 2013 (doi:10.1093/llc/fqt066).
 
-Eder, M. (forthcoming). Visualization in stylometry: some reliability issues.
+Eder, M. (forthcoming). Visualization in stylometry: some problems and 
+solutions.
 
 Eder, M. and Rybicki, J. (2011). Stylometry with R. In \textit{Digital
 Humanities 2011: Conference abstracts}. Stanford University, CA, pp.
