--- a/stylo_howto.tex
+++ b/stylo_howto.tex
@@ -1080,7 +1080,7 @@ when this option is checked, the script will automatically assign
 the same colors to texts with the same first segment of their file
 names (the first string ending in ``{}\code{\underscore}''). 
 
-\item Grayscale:\margin{"grayscale"} select
+\item Greyscale:\margin{"greyscale"} select
 this option to have automatic color coding (in greyscale). The file
 names convention: see above. While the graphs become less pretty than
 when colored, this might be your method of choice if the journal you're
