dist measures updated

--- a/stylo_howto.tex
+++ b/stylo_howto.tex
@@ -1,6 +1,6 @@
 
 
-% 2015/11/7
+% 2018/02/15
 
 
 % new features:
@@ -972,7 +972,6 @@ in the version 6.3.\margin{"dist.cosine"}:
 \[
 \delta_{(AB)}=1- \frac{A\cdot B}{\|A\|\|B\|}= 1- \frac{\sum\limits _{i=1}^{n}{A_{i}B_{i}}}{\sqrt{\sum\limits _{i=1}^{n}{A_{i}^2}}\cdot\sqrt{\sum\limits _{i=1}^{n}{A_{i}^2}}}
 \]
-
 
 
 
@@ -1955,7 +1954,7 @@ is straightforward:
 stylo(distance.measure = "dist.entropy")
 \end{alltt}
 
-Etc. etc. The are plethora of possible distance measures. The users are 
+Etc. etc. There are plethora of possible distance measures. The users are 
 encouraged to examine them all!
 
 \subsection{Large-scale stylometric tests}
